# EventPlanner_NAT

./: .env  README.md  config.yml  db_setup.py  event_planning.db  fix_functions.md  guide.md  pyproject.toml  requirements.txt  server.ipynb  test_db.ipynb  test_nim_llm.py
.tmp/: job_store.db
NeMo-Agent-Toolkit-UI/: .env
event_planning_nemo/: __init__.py  event_planning_nemo.py  register.py
event_planning_nemo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
