[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "event-planning-nemo"
version = "1.0.0"
description = "Event Planning System using NVIDIA NeMo Agent Toolkit"
requires-python = ">=3.11"
dependencies = [
    "nvidia-nat>=1.3.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

# THIS IS CRITICAL - Entry point for NeMo to discover functions
[project.entry-points."nat.components"]
event_planning = "event_planning_nemo.register"

[tool.setuptools.packages.find]
where = ["."]
include = ["event_planning_nemo*"]